--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "list-projects"
 version = "0.2.0"
 authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
 
+[[bin]]
+name = "lpj"
+path = "src/main.rs"
+
 [dependencies]
 docopt = "0.7.0"
 rustc-serialize = "0.3"
